update circuit framework

--- a/src/Makefile
+++ b/src/Makefile
@@ -11,6 +11,10 @@ OBJS += util/logtrace.c.o \
 		util/string.c.o \
 		util/sys-memory.c.o \
 		util/hashmap.c.o \
+		util/list.c.o \
+		util/rbtree.c.o \
+		util/prime.c.o \
+		util/bound.c.o \
 
 OBJS += scheme-intr/lisp-buffer.c.o \
 		scheme-intr/lisp-fault.c.o \
@@ -18,7 +22,11 @@ OBJS += scheme-intr/lisp-buffer.c.o \
 		scheme-intr/lisp-parser.c.o \
 		scheme-intr/lisp.c.o
 
-OBJS += opendsim.c.o
+OBJS += math/circ-matrix/circmatrix.c.o \
+
+OBJS += circuit/circuit.c.o \
+		circuit/circ-node.c.o \
+		circuit/circ-element.c.o \
 
 .PHONY: all clean subs subs_clean opendsim
 
@@ -35,9 +43,9 @@ include $(SUB_DEPTH)/targets/rules.generic.mk
 #########################################################################
 # Main rules.
 
-opendsim: opendsim.$(.EXEC)
+opendsim: libopendsim.$(.LIB)
 
-opendsim.$(.EXEC): $(OBJS)
+libopendsim.$(.LIB): $(OBJS)
 
 subs:
 
