update core circuit framework

--- a/testcase/Makefile
+++ b/testcase/Makefile
@@ -1,3 +1,5 @@
+.PHONY: all clean makelib dotest
+
 SUB_DEPTH = ./..
 
 include $(SUB_DEPTH)/autoconf.mk
@@ -7,36 +9,37 @@ CFLAGS += -Wno-unused-function -Wno-unused-but-set-variable
 #########################################################################
 # Targets.
 
-LIBS += opendsim
+LIBS += opendsim dsimmodel dsimdevice
 OBJS += tsf/tsf.c.o
-
 INCS += tsf
-INCS += $(SRC)
 
 CONFIG_TESTCASE := y
 
-SRCS_TEST := \
-	test-hashmap.c \
-	test-list.c \
-	test-rbtree.c \
-	test-bound.c \
-	test-circmatrix.c \
-	test-scheme-lex.c
+SRC := test-hashmap.c
+SRC += test-list.c
+SRC += test-rbtree.c
+SRC += test-bound.c
+SRC += test-circmatrix.c
+SRC += test-circ-element-create.c
+SRC += test-circuit.c
+SRC += test-mdel-register.c
+SRC += test-mdel-diode.c
+SRC += test-mdel-adc.c
+SRC += test-mdel-dac.c
+SRC += test-mdel-or.c
+SRC += test-scheme-lex.c
 
-.PHONY: all clean makelib dotest
+SRCS_TEST = $(SRC)
+
+#########################################################################
+# Building rules.
+
+include $(SUB_DEPTH)/build-aux/rules.generic.mk
 
 all: makelib dotest
 
-clean: generic_clean
+clean: genclean
 
-#########################################################################
-# Standard rules.
-
-include $(SUB_DEPTH)/targets/rules.generic.mk
-
-
-#########################################################################
-# Main rules.
 
 EXECS_TEST := $(foreach name,$(SRCS_TEST),$(patsubst %.c,%.$(.EXEC),$(name)))
 
@@ -45,11 +48,12 @@ define GENERATE_LINK_RULE
 $(1): $(OBJS) $(LIBOPENDSIM) $(2)
 endef
 
-$(foreach exec,$(EXECS_TEST),$(eval $(call GENERATE_LINK_RULE,$(exec),$(patsubst %.$(.EXEC),%.o,$(exec)))) )
+$(foreach exec,$(EXECS_TEST),$(eval $(call GENERATE_LINK_RULE,$(exec),$(patsubst %.$(.EXEC),%.c.o,$(exec)))) )
+
 POST_CMD := $(foreach exec,$(EXECS_TEST),./$(exec) && )
 
 makelib:
-	@make -C $(SUB_DEPTH)/src all
+	@$(MAKE) -C $(SUB_DEPTH)/src -f Makefile.lib all
 
 dotest: $(EXECS_TEST)
 	@$(POST_CMD) echo.
