--- a/src/Makefile.edit
+++ b/src/Makefile.edit
@@ -10,9 +10,23 @@ CXXFLAGS += -Wno-unused-function -Wno-unused-but-set-variable
 # Targets.
 
 TARGET = opendsim-edit.$(.EXEC)
-LIBS += opendsim dsimmodel dsimdevice
+LIBS += dsimdevice opendsim dsimmodel 
 
+OBJS += schema/schema-throw.cxx.o \
+		schema/schema-parser.cxx.o \
+		schema/schema-op.cxx.o \
+		
 OBJS += opendsim-edit.cxx.o \
+		componentgraph.cxx.o \
+		domdataset.cxx.o \
+		domitem.cxx.o \
+		dompool.cxx.o \
+		schemasheet.cxx.o \
+		templatestyle.cxx.o \
+		componentgraphitem.cxx.o \
+		elementgraphitem.cxx.o \
+		elementpin.cxx.o \
+      	elementtext.cxx.o \
 
 QT_RCCS += resources.qrc
 
@@ -23,15 +37,18 @@ QT_SRCS += mainwindow.cxx \
           schemaeditorform.cxx \
           componentpickwidget.cxx \
           componentpicktree.cxx \
+          componentlibrarydialog.cxx \
+          schsymboleditorform.cxx \
 
 #########################################################################
 # Building rules.
 
 include $(SUB_DEPTH)/build-aux/rules.qt5.mk
 include $(SUB_DEPTH)/build-aux/rules.generic.mk
+include $(SUB_DEPTH)/build-aux/rules.end.mk
 
 all: $(TARGET)
 
-$(TARGET): $(OBJS)
+$(TARGET): $(OBJS) $(LIBDSIMDEVICE) $(LIBOPENDSIM) $(LIBDSIMMODEL)
 
 clean: genclean
