implemented schematic fine turning and implemented device PIN settings dialog

--- a/opendsim-frontend/Makefile.edit
+++ b/opendsim-frontend/Makefile.edit
@@ -43,6 +43,7 @@ QT_SRCS += mainwindow.cxx \
           componentpicktree.cxx \
           componentlibrarydialog.cxx \
           textsettingsdialog.cxx \
+          pinsettingsdialog.cxx \
           propertiescustomdialog.cxx \
           presscombobox.cxx \
 
