fixup device pin rotation layout

--- a/opendsim-frontend/Makefile.edit
+++ b/opendsim-frontend/Makefile.edit
@@ -20,6 +20,7 @@ OBJS += opendsim-edit.cxx.o \
 		schemasheet.cxx.o \
 		templatestyle.cxx.o \
 		templatecustom.cxx.o \
+		rotationtransform.cxx.o \
 		elementbase.cxx.o \
 		componentgraphitem.cxx.o \
     	elementpin.cxx.o \
