fixup bugs of reference counter used by schematic elements

--- a/opendsim-frontend/Makefile.am
+++ b/opendsim-frontend/Makefile.am
@@ -70,6 +70,7 @@ MOCHEADERS = \
   schemawidget.h \
   schemaview.h \
   schemascene.h \
+  elementwire.h \
   schemaeditorform.h \
   componentpickwidget.h \
   componentpicktree.h \
