--- a/opendsim-frontend/Makefile.in
+++ b/opendsim-frontend/Makefile.in
@@ -285,6 +285,7 @@ MOCHEADERS = \
   schemawidget.h \
   schemaview.h \
   schemascene.h \
+  elementwire.h \
   schemaeditorform.h \
   componentpickwidget.h \
   componentpicktree.h \
